# 22b-paideia-engines

./: .gitattributes  .gitignore  README.ko.md  README.md  pyproject.toml
docs/: architecture.ko.md  architecture.md  cross_repo_compatibility_manifest.json  data_acquisition.ko.md  data_acquisition.md  dataset_adapter_backlog.ko.md  dataset_adapter_backlog.md  downstream_reuse_recipes.ko.md  downstream_reuse_recipes.md  edge_autonomy_contracts.md  engine_contracts.ko.md  engine_contracts.md  example_data_index.ko.md  example_data_index.md  learning_validity_pr0_baseline.json  master_development_plan.ko.md  master_development_plan.md  public_asset_audit.ko.md  public_asset_audit.md  real_engine_development.ko.md  real_engine_development.md  release_checklist.ko.md  release_checklist.md  release_guide.ko.md  release_guide.md  source_parsers.ko.md  source_parsers.md
examples/: acquired_sources_manifest.jsonl  assessment_and_cultivation_pipeline.py  basic_growth_cycle.py  configured_suite.json  data_and_curriculum_pipeline.py  downstream_single_engine_recipe.py  downstream_suite_recipe.py  governance_and_runtime_pipeline.py  public_item_sample.jsonl  source_fixture_pack.json  source_specific_parsers.py  stress_and_promotion_pipeline.py
tests/: _wheel_smoke.py  test_acquired_source_manifest_diagnostics.py  test_adapter_certification.py  test_assessment.py  test_assessment_item_bank.py  test_autonomy_contracts.py  test_behavioral_governance.py  test_behavioral_pattern_exam.py  test_benchmark_pack.py  test_cli.py  test_configured_suite_output_validator.py  test_contracts.py  (+29 more)
(+105 files in other folders)
