[project]
name = "paideia-engines"
version = "0.2.0"
description = "Reusable local-first engines for Paideia-style AI agent growth systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "22B" }
]
keywords = ["ai-agents", "evaluation", "governance", "memory", "local-first"]
dependencies = []

[project.scripts]
paideia-engines = "paideia_engines.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
